fixed image distortion on tools page and tweaked CSS

--- a/CSS/tools.css
+++ b/CSS/tools.css
@@ -27,15 +27,31 @@ h1{
     margin-bottom: 7%;
 }
 
+/* queries */
+
 @media only screen and (max-width: 1300px){
     h1{
         font-size: 2rem;
     }
 }
 
+@media only screen and (min-width: 992px){
+    .description{
+        margin: auto;
+    }
+}
+
 @media only screen and (max-width: 991px){
+    .caption{
+        margin-bottom: 7%;
+    }
+
     .description{
         margin-top: 5%;
+    }
+
+    .last-row{
+        margin-bottom: 0;
     }
 }
 
@@ -60,5 +76,11 @@ h1{
 @media only screen and (max-width: 500px){
     h1{
         font-size: 1.5rem;
+    }
+}
+
+@media only screen and (max-width: 290px){
+    h1{
+        font-size: 1.2rem;
     }
 }
